--- a/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencement.html.twig
+++ b/src/Ecommerce/EcommerceBundle/Resources/views/Default/referencement/modulesUsed/referencement.html.twig
@@ -2,6 +2,15 @@
 
 
 {% block body -%}
+<div class="">
+    <h2>Referencement</h2>
+</div>
+
+<div class="">
+    <h5>Mes activités</h5>
+</div>
+
+
 
     <form class="form-group" name="form1" method="post" action="" >
         <table>
@@ -13,15 +22,16 @@
             <tr><td><input type="text" name="sum2" id="sum2" class="pres_marq" style="display:none;"/></td></tr>
             <tr><td>Marque</td><td><b>Nbre:</b>&nbsp<input type="text" name="num1" id="num3" class="pres_marq" /></td></tr>
             <tr><td><input type="text" name="num1" id="sum3" class="pres_marq" style="display:none;" /></td></tr>
-            <tr><td>    budget estimé</td> <td><input type="text" id="mari" value=""></td></tr>
+            <tr><td>    budget estimé</td> <td><input type="text" id="mari" style="display:none;" value=""></td></tr>
+            <tr><td>    budget estimé</td> <td><input type="text" id="rania"   value=""></td></tr>
         </table>
 
 
+        <div class="">
+            <h5>Ma visibilité sur</h5>
+        </div>
 
-        <h4>Affichage</h4>
-        <h5>Vignette thématique</h5>
-
-        <input type="text" id="amal" value="">
+        <input  style="display:none;" type="text" id="amal" value="">
 
 
 
@@ -49,24 +59,62 @@
                     <li id="">
                         <div align=center class="col-md-3" style="background-color: white; height:210px; overflow-y:scroll;">
 
-                            <div class="titre">Ville sup</div>
+                            <div class="titre">Ville supplementaires</div>
 
-                            <h5><input type="checkbox" id="chk1" name="chk1"   class="my-activity"  value="0">Sa région</h5>
-
-
-                            <h5><input type="checkbox" id="chk2" name="chk2"   class="my-activity"  value="1">+1 région</h5>
+                            <h5><input type="checkbox" id="chk1" name="chk1"   class="my-activity"  value="0">Sur sa localité</h5>
 
 
-                            <h5><input type="checkbox" id="chk3" name="chk3"   class="my-activity"  value="3">+3 région</h5>
+                            <h5><input type="checkbox" id="chk2" name="chk2"   class="my-activity"  value="1">+1 localité</h5>
 
 
-                            <h5><input type="checkbox" id="chk4" name="chk4"   class="my-activity"  value="6">+6 région</h5>
+                            <h5><input type="checkbox" id="chk3" name="chk3"   class="my-activity"  value="3">+3 localité</h5>
 
-                            <h5><input type="checkbox" id="chk4" name="chk5"   class="my-activity"  value="9">+9 région</h5>
+
+                            <h5><input type="checkbox" id="chk4" name="chk4"   class="my-activity"  value="6">+6 localité</h5>
+
+                            <h5><input type="checkbox" id="chk4" name="chk5"   class="my-activity"  value="9">+9 localité</h5>
 
                         </div>
                     </li>
 
+
+                    <li id="">
+                        <div align=center class="col-md-3" style="background-color: white; height:210px; overflow-y:scroll;">
+
+
+
+                            <div class="titre">Region principale</div>
+
+                            {% for  entities in entities %}
+                                <div class="tex" >
+                                    <input id="select" class="region" type="radio" name="villes"  value="{{ entities.coderegion }}"/>{{ entities.libelle }}
+
+                                </div>
+                            {% endfor %}
+
+                        </div>
+                    </li>
+
+                    <li id="">
+                        <div align=center class="col-md-3" style="background-color: white; height:210px; overflow-y:scroll;">
+
+                            <div class="titre">Region supplementaires</div>
+
+                            <h5><input type="checkbox" id="chk1" name="chk1"   class="region"  value="0">Sur sa region</h5>
+
+
+                            <h5><input type="checkbox" id="chk2" name="chk2"   class="region"  value="1">+1 region</h5>
+
+
+                            <h5><input type="checkbox" id="chk3" name="chk3"   class="region"  value="3">+3 region</h5>
+
+
+                            <h5><input type="checkbox" id="chk4" name="chk4"   class="region"  value="6">+6 region</h5>
+
+                            <h5><input type="checkbox" id="chk4" name="chk5"   class="region"  value="N">National</h5>
+
+                        </div>
+                    </li>
 
 
                 </ul>
@@ -77,15 +125,16 @@
 <script src="http://code.jquery.com/jquery.js"></script>
 <script type="text/javascript">
     $(document).ready(function() {
-
+        var sum_result =0;
 
         $(document).on('click', '.my-activity', function () {
-         
-            var ctar  = 'VA';
+
+            var ctar  = 'MV';
             console.log("CHANGE rubrique AND prestation....................");
             var select = jQuery(this);
             var v = $('input[name=villes]:checked').val();
             var o = $(this).attr("value");
+
             console.log('ville : ', v, 'opt1 :',o);
             var data_send = { 'ville': v,'opt1':o,'region':v,'ctar':ctar};
             $.ajax({
@@ -101,8 +150,47 @@
 
                         $('input[id=amal]').val(successMessage);
 
-                        sum()+ successMessage;
+                        console.log();
+                        $('input[id=rania]').val(sum_result+successMessage);
 
+                    },
+
+                    412: function (response) {
+                        var errorsForm = response.responseJSON.formErrors;
+                        //on affiche les erreurs...
+                        alert('error');
+
+                    }
+                }
+            });
+
+        });
+
+        $(document).on('click', '.region', function () {
+
+            var ctar  = 'ML';
+            console.log("CHANGE rubrique AND prestation....................");
+            var select = jQuery(this);
+            var v = $('input[name=villes]:checked').val();
+            var o = $(this).attr("value");
+
+            console.log('ville : ', v, 'opt1 :',o);
+            var data_send = { 'ville': v,'opt1':o,'region':v,'ctar':ctar};
+            $.ajax({
+                url: '{{ path('ajaxRef') }}',
+                type: 'POST',
+                data: data_send,
+                statusCode: {
+                    //traitement en cas de succès
+                    200: function (response) {
+
+                        var successMessage = response.nom.VAR;
+
+
+                        $('input[id=amal]').val(successMessage);
+
+                        console.log();
+                        $('input[id=rania]').val(sum_result+successMessage);
 
                     },
 
@@ -139,7 +227,7 @@
                 }
                 document.getElementById("mari").value = result2 + result3 ;
 
-                return result2 + result3;
+                sum_result =  result2 + result3;
             }
 
 
